# fresqcos

./: .pylintrc  README.md  code_quality.py  mypy.ini  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
fresqcos/channels/: channels.py  cn2.py  sat_test.py
orbits/: sat_to_sat_custom_orbit.py  sat_to_sat_tle.py  sat_two_ground_stations_custom_orbit.py
src/fresqcos/channels/: channels.py  cn2.py  fiber_coupling.py  probability_distributions.py  wind.py
src/fresqcos/orbits/: sat_ground_custom_orbit.py  sat_ground_tle.py  sat_two_ground_stations_tle.py
