[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fresqcos"
version = "0.1.0"
description = "Free-space quantum communication software"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ilektra Karakosta-Amarantidou", email = "ilektra.karakosta@icfo.eu" },
]
license = { file = "LICENSE" }

dependencies = [
  # "numpy",
  # "scipy",
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "mypy",
  "docstr-coverage",
  "pre-commit",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | docs
  | examples
)/
'''