[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fresqcos"
version = "0.1.0"
description = "Free-space quantum communication software"
readme = "README.md"
authors = [
  { name = "Ilektra Karakosta-Amarantidou", email = "ilektra.karakosta@icfo.eu" },
]
license = { file = "LICENSE" }

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "astropy",
  "poliastro",
  "sgp4"
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "mypy",
  "docstr-coverage",
  "pre-commit",
  "sphinx",
  "sphinx-rtd-theme"
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | docs
  | examples
)/
'''